# project-bebbo

./: .gitignore  README.md  app usage descriptives.R  app_data.R  baseline imbalance.R  bebbo-trial.tex  descriptives.R  functions.R  main.R  reliability.R  variable creation.R
code/: Untitled.ipynb  app usage descriptives.R  app_data.R  attrition.R  baseline imbalance.R  baseline_imbalance.R  bebbo_knowledge.R  construct_transformation.R  data.R  descriptives constructs.R  descriptives controls.R  descriptives.R  descriptives_constructs.R  descriptives_controls.R  functions.R  main.R  power.R  pre_post.R  regressions.R  reliability.R  takeup.R  translation.R  variable creation.R
data/: process.py  pyproject.toml
data/final/: serbia.csv
data/raw/: Bebbo Evaluation Survey - Pilot decisions - Updated baseline.csv  Bebbo Evaluation Survey - Serbia - English Analysis notes - Baseline.csv  Bebbo Evaluation Survey - Serbia - English Analysis notes.xlsx - Baseline.csv  key baseline 09-19.csv
data/raw/bulgaria/: responses.csv
data/raw/serbia/: responses_2023-07-01.csv
report/: _region_.tex  bebbo.tex
tables/: all_variables_loadings.tex  alpha_drop.tex  alpha_drop_bulgaria.tex  alpha_drop_serbia.tex  app usage and baseline characteristics - linear reg.tex  app_usage.tex  attrition and app usage - logistic reg.tex  attrition and baseline characteristics - logistic reg.tex  balance-observations.tex  balance.tex  breastfed.tex  construct variable mapping.tex  construct_cor_baseline.tex  construct_cor_endline.tex  construct_correlations_serbia.tex  constructs.tex  (+46 more)
(+238 files in other folders)
